<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enterusername"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="enterpassword"
        android:background="@drawable/box_style"
        android:backgroundTint="@color/grey"
        android:hint="@string/Eusername"
        android:inputType="text|textAutoComplete"
        android:padding="12dp"
        android:text="@string/Eusername"
        android:textColor="@color/grey2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enterpassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="enterpassword"
        android:background="@drawable/box_style"
        android:backgroundTint="@color/grey"
        android:hint="@string/Epassword"
        android:inputType="text|textPassword|textAutoComplete"
        android:padding="12dp"
        android:text="@string/Epassword"
        android:textColor="@color/grey2" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/oval_button"
        android:backgroundTint="@color/orange"
        android:text="@string/login" />

    <TextView
        android:id="@+id/redirect_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/signupredirect" />
</LinearLayout>